# hw_web_07

./: alembic.ini  database.py  main.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
alembic/versions/: 64e4748d1bc6_initial_migration.py
